[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Station/Environment/Animated/Door4.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Station/Door.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door5.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door9.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door10.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door11.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door13.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Station/Environment/Animated/Door12.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "Close",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "Open",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.4514, 14.5618 )

[node name="Door" type="Node2D"]
script = ExtResource( 3 )

[node name="DoorSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Close"
frame = 4
playing = true

[node name="OpenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenArea"]
position = Vector2( -1.89114, -1.58557 )
shape = SubResource( 2 )
[connection signal="area_entered" from="OpenArea" to="." method="_on_OpenArea_area_entered"]
[connection signal="area_exited" from="OpenArea" to="." method="_on_OpenArea_area_exited"]
[connection signal="body_entered" from="OpenArea" to="." method="_on_OpenArea_body_entered"]
[connection signal="body_exited" from="OpenArea" to="." method="_on_OpenArea_body_exited"]
